[tool.poetry]
name = "vox-pop"
version = "0.1.0"
description = ""
authors = ["yersmad <yersmad@gmail.com>"]
readme = "README.md"
packages = [{include = "vox_pop"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.22.0"
jinja2 = "^3.1.2"
fastapi = "^0.100.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
